Noodling with Risk List/Details

--- a/RaidLog/RaidLog.csproj
+++ b/RaidLog/RaidLog.csproj
@@ -178,8 +178,10 @@
     <Compile Include="Models\DeleteProject.cs" />
     <Compile Include="Models\DependencyDto.cs" />
     <Compile Include="Models\EditProject.cs" />
+    <Compile Include="Models\EditRiskDto.cs" />
     <Compile Include="Models\IssueDto.cs" />
     <Compile Include="Models\NewProject.cs" />
+    <Compile Include="Models\NewRiskDto.cs" />
     <Compile Include="Models\ProjectDetails.cs" />
     <Compile Include="Models\ProjectSummaryWithCounts.cs" />
     <Compile Include="Models\QueryDto.cs" />
@@ -218,16 +220,13 @@
     <Content Include="App\main.js" />
     <Content Include="App\services\logger.js" />
     <Content Include="App\viewmodels\newProject.js" />
-    <Content Include="App\viewmodels\projectDetails.js" />
     <Content Include="App\viewmodels\projectList.js" />
-    <Content Include="App\viewmodels\projectRisks.js" />
     <Content Include="App\viewmodels\riskDetails.js" />
     <Content Include="App\viewmodels\riskList.js" />
     <Content Include="App\viewmodels\shell.js" />
     <Content Include="App\views\newProject.html" />
-    <Content Include="App\views\projectDetails.html" />
     <Content Include="App\views\projectList.html" />
-    <Content Include="App\views\projectRisks.html" />
+    <Content Include="App\views\riskDetails.html" />
     <Content Include="App\views\riskList.html" />
     <Content Include="App\views\shell.html" />
     <Content Include="Content\app.css" />
