--- a/RaidLog/packages.config
+++ b/RaidLog/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="3.0.2" targetFramework="net45" />
   <package id="Autofac.WebApi" version="3.0.2" targetFramework="net45" />
+  <package id="Bootstrap.DateTimePicker" version="0.0.11" targetFramework="net45" />
   <package id="CacheCow.Common" version="0.4.4" targetFramework="net45" />
   <package id="CacheCow.Server" version="0.4.4" targetFramework="net45" />
   <package id="CacheCow.Server.EntityTagStore.SqlServer" version="0.4.1" targetFramework="net45" />
@@ -31,6 +32,7 @@
   <package id="Microsoft.Net.Http" version="2.1.10" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="Moment.js" version="2.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.5" targetFramework="net45" />
   <package id="Sammy.js" version="0.7.4" targetFramework="net45" />
   <package id="toastr" version="1.3.0" targetFramework="net45" />
