--- a/RaidLog.Web/packages.config
+++ b/RaidLog.Web/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Bootstrap.DateTimePicker" version="0.0.11" targetFramework="net45" />
+  <package id="Dapper" version="1.13" targetFramework="net45" />
+  <package id="Dapper-Async" version="1.03" targetFramework="net45" />
   <package id="FontAwesome" version="3.2.1" targetFramework="net45" />
   <package id="jQuery" version="2.0.2" targetFramework="net45" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="0.1.7" targetFramework="net45" />
