--- a/RaidLog.Spa/packages.config
+++ b/RaidLog.Spa/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.1.1" targetFramework="net45" />
+  <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net45" />
   <package id="Autofac.WebApi" version="3.1.0" targetFramework="net45" />
   <package id="Bootstrap.DateTimePicker" version="0.0.11" targetFramework="net45" />
   <package id="bootstrap.TypeScript.DefinitelyTyped" version="0.0.4" targetFramework="net45" />
