--- a/RaidLog.Spa/RaidLog.Spa.csproj
+++ b/RaidLog.Spa/RaidLog.Spa.csproj
@@ -212,6 +212,14 @@
       <DependentUpon>routeFactory.ts</DependentUpon>
     </Content>
     <TypeScriptCompile Include="App\services\routeFactory.ts" />
+    <Content Include="App\viewmodels\actionDetails.min.js">
+      <DependentUpon>actionDetails.ts</DependentUpon>
+    </Content>
+    <Content Include="App\viewmodels\actionDetails.ts" />
+    <Content Include="App\viewmodels\actionList.min.js">
+      <DependentUpon>actionList.ts</DependentUpon>
+    </Content>
+    <Content Include="App\viewmodels\actionList.ts" />
     <Content Include="App\viewmodels\assumptionDetails.js">
       <DependentUpon>assumptionDetails.ts</DependentUpon>
     </Content>
@@ -296,6 +304,8 @@
       <DependentUpon>shell.ts</DependentUpon>
     </Content>
     <TypeScriptCompile Include="App\viewmodels\shell.ts" />
+    <Content Include="App\views\actionDetails.html" />
+    <Content Include="App\views\actionList.html" />
     <Content Include="App\views\assumptionList.html" />
     <Content Include="App\views\issueDetails.html" />
     <Content Include="App\views\issueList.html" />
